# vorbis

./: CMakeLists.txt
cmake/: Config.cmake.in
lib/: CMakeLists.txt
